force-app/main/default/objects/Meeting_Log_V2__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kia Showroom</fullName>
                <color>#FF0000</color>
                <default>true</default>
                <label>Kia Showroom</label>
            </value>
            <value>
                <fullName>Mitsubishi Showroom</fullName>
            </value>
            <value>
                <fullName>Citroen Showroom</fullName>
            </value>
            <value>
                <fullName>DS Showroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>