force-app/main/default/objects/Meeting_Log_V2__c/fields/Mission_Objective__c.field-meta.xml
<CustomField>
    <fullName>Mission_Objective__c</fullName>
    <formula>TEXT(Type_of_Meeting_Logs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mission &amp; Objective</label>
    <type>Text</type>
</CustomField>