force-app/main/default/objects/Meeting_Log_V2__c/fields/Mission_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Mission_Objectives__c</fullName>
    <label>Mission &amp; Objectives</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>