force-app/main/default/objects/Meeting_Log_V2__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <label>Participant Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gordon Ho</fullName>
            </value>
            <value>
                <fullName>Kia Sales</fullName>
            </value>
            <value>
                <fullName>Kia Sales 2</fullName>
            </value>
            <value>
                <fullName>Debra Lim</fullName>
            </value>
            <value>
                <fullName>Alan Yeo</fullName>
            </value>
            <value>
                <fullName>Mason Law</fullName>
            </value>
            <value>
                <fullName>Mimi Lee</fullName>
            </value>
            <value>
                <fullName>Clement Teas</fullName>
            </value>
            <value>
                <fullName>James Law</fullName>
            </value>
            <value>
                <fullName>Winnie Yeo</fullName>
            </value>
            <value>
                <fullName>Gary Quek</fullName>
            </value>
            <value>
                <fullName>Gracie Cheng</fullName>
            </value>
            <value>
                <fullName>Kee Hing Ng</fullName>
            </value>
            <value>
                <fullName>Lance Kouk</fullName>
            </value>
            <value>
                <fullName>Derrick Soh</fullName>
            </value>
            <value>
                <fullName>Alvin Tham</fullName>
            </value>
            <value>
                <fullName>George Pang</fullName>
            </value>
            <value>
                <fullName>David Phang</fullName>
            </value>
            <value>
                <fullName>Cheng Khoon Tan</fullName>
            </value>
            <value>
                <fullName>Dawn Pan</fullName>
            </value>
            <value>
                <fullName>Mei Ting Koh</fullName>
            </value>
            <value>
                <fullName>Bryan Heng</fullName>
            </value>
            <value>
                <fullName>Melvin Lee</fullName>
            </value>
            <value>
                <fullName>Janice Mao</fullName>
            </value>
            <value>
                <fullName>Wilson Lau</fullName>
            </value>
            <value>
                <fullName>Dave Wong</fullName>
            </value>
            <value>
                <fullName>Doris Yeo</fullName>
            </value>
            <value>
                <fullName>Chantel Tae</fullName>
            </value>
            <value>
                <fullName>Albert Soo</fullName>
            </value>
            <value>
                <fullName>Jessie Choo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>